fixed right side mobile responsive issues
- fixed white space on right side of the screen (mobile view) because of some unnecessary margin on the welcome text

--- a/css/style.css
+++ b/css/style.css
@@ -146,8 +146,6 @@ body {
     font-family: "Poppins", 'Inter', sans-serif;
     color: white;
     background-color: var(--cyan-green-darkest);
- 
-    height: 100%;
     margin: 0;
     padding: 0;
     position: relative;
